# Estima

./: .gitignore  Cargo.toml  README.md  README_CN.md  estima.desktop  run-gui-egui.sh  run-gui.sh  tauri
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/examples/: test_serde.rs  test_ui.rs
crates/core/src/: config.rs  lib.rs
crates/core/src/ai/: mod.rs  ollama.rs  openai.rs  provider.rs  tools.rs
crates/core/src/audio/: carla_ui.rs  jack_engine.rs  lv2_external_ui.rs  mod.rs  plugin_chain.rs  plugin_ui.rs
crates/core/src/control/: interpreter.rs  mod.rs
crates/core/src/ffi/: carla.rs  lv2_ui.rs  mod.rs  suil.rs
crates/core/src/memory/: conversation.rs  mod.rs  storage.rs
crates/gui/: Cargo.toml  estima.desktop  tauri.conf.json
crates/gui-egui/: Cargo.toml
crates/gui-egui/src/: main.rs
crates/gui/capabilities/: default.json
crates/gui/src/: lib.rs
crates/gui/src-tauri/: tauri.conf.json
crates/gui/src-tauri/src/: main.rs
crates/gui/src-ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/gui/src-ui/src/: App.vue  main.ts  style.css
crates/gui/src-ui/src/__tests__/: audioStore.test.ts
crates/gui/src-ui/src/components/: AIChat.vue  BypassToggle.vue  EffectChain.vue  ParameterPanel.vue  PluginManager.vue  PresetManager.vue  Settings.vue
crates/gui/src-ui/src/stores/: audioStore.ts
